@@ -1,14 +1,15 @@
 package com.vettrack.api.pet;
 
-import com.vettrack.api.common.exception.ResourceNotFoundException;
 import com.vettrack.api.storage.StorageService;
+import org.springframework.web.multipart.MultipartFile;
+import java.time.OffsetDateTime;
+
+import com.vettrack.api.common.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.security.SecureRandom;
-import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
 
@@ -19,40 +20,25 @@ public class PetService {
     private final PetRepository petRepository;
     private final StorageService storageService;
 
-    // Görsel olarak karıştırılabilecek karakterler (0, O, 1, I, L) tamamen çıkarılmış 31 karakterlik güvenli alfabe
     private static final String ALPHANUMERIC = "23456789ABCDEFGHJKMNPQRSTUVWXYZ";
     private static final SecureRandom RANDOM = new SecureRandom();
 
-    /**
-     * Yeni bir evcil hayvan oluşturur.
-     * Hayvan ilk kez kaydedilirken ömür boyu değişmeyecek 6 haneli benzersiz kod atanır.
-     */
     @Transactional
     public Pet createPet(Pet pet) {
         pet.setUniqueCode(generateUniqueCode());
         return petRepository.save(pet);
     }
 
-    /**
-     * Hekimlerin veya kullanıcıların 6 haneli benzersiz kod ile arama yapmasını sağlar.
-     * Parametredeki boşluklar temizlenir ve otomatik büyük harfe dönüştürülür.
-     */
     @Transactional(readOnly = true)
     public Pet getPetByUniqueCode(String uniqueCode) {
-        if (uniqueCode == null || uniqueCode.isBlank()) {
+        if (uniqueCode == null || uniqueCode.trim().isEmpty()) {
             throw new IllegalArgumentException("Arama kodu boş olamaz");
         }
-
-        // Boşlukları temizle ve büyük harfe çevir
         String cleanedCode = uniqueCode.trim().toUpperCase();
-
         return petRepository.findByUniqueCodeIgnoreCaseAndDeletedAtIsNull(cleanedCode)
                 .orElseThrow(() -> new ResourceNotFoundException("Bu koda sahip evcil hayvan bulunamadı: " + cleanedCode));
     }
 
-    /**
-     * ID ile tekil pet detayını getirir.
-     */
     @Transactional(readOnly = true)
     public Pet getPetById(UUID id) {
         Pet pet = petRepository.findById(id)
@@ -63,40 +49,21 @@ public class PetService {
         return pet;
     }
 
-    /**
-     * Hayvan sahibinin tüm petlerini listeler.
-     */
     @Transactional(readOnly = true)
     public List<Pet> getPetsByOwner(UUID ownerId) {
         return petRepository.findByOwnerIdAndDeletedAtIsNullOrderByCreatedAtDesc(ownerId);
     }
 
-    /**
-     * Pet bilgilerini günceller.
-     * Dikkat: uniqueCode asla güncellenmez/değiştirilmez!
-     */
-    /**
-     * Pet bilgilerini kısmen günceller (partial update).
-     * Sadece null olmayan alanlar güncellenir — API sözleşmesi gereği tüm alanlar opsiyoneldir.
-     * Dikkat: uniqueCode asla güncellenmez, photoUrl bu endpoint üzerinden değiştirilmez
-     * (bunun için POST /pets/{id}/photo kullanılır).
-     */
     @Transactional
-    public Pet updatePet(UUID id, Pet petDetails) {
+    public Pet updatePet(UUID id, PetUpdateRequest request) {
         Pet existingPet = getPetById(id);
 
-        if (petDetails.getName() != null) {
-            existingPet.setName(petDetails.getName());
-        }
-        if (petDetails.getAge() != null) {
-            existingPet.setAge(petDetails.getAge());
-        }
-        if (petDetails.getGender() != null) {
-            existingPet.setGender(petDetails.getGender());
-        }
-        if (petDetails.getBreed() != null) {
-            existingPet.setBreed(petDetails.getBreed());
-        }
+        if (request.getName() != null) existingPet.setName(request.getName());
+        if (request.getSpecies() != null) existingPet.setSpecies(request.getSpecies());
+        if (request.getBreed() != null) existingPet.setBreed(request.getBreed());
+        if (request.getGender() != null) existingPet.setGender(request.getGender());
+        if (request.getBirthDate() != null) existingPet.setBirthDate(request.getBirthDate());
+        if (request.getEstimatedBirthYear() != null) existingPet.setEstimatedBirthYear(request.getEstimatedBirthYear());
 
         return petRepository.save(existingPet);
     }
@@ -123,9 +90,6 @@ public class PetService {
         petRepository.save(pet);
     }
 
-    /**
-     * 6 haneli, çakışmasız ve güvenli alfabe kullanan kod üretir.
-     */
     private String generateUniqueCode() {
         String code;
         do {
@@ -134,8 +98,7 @@ public class PetService {
                 sb.append(ALPHANUMERIC.charAt(RANDOM.nextInt(ALPHANUMERIC.length())));
             }
             code = sb.toString();
-        } while (petRepository.existsByUniqueCode(code)); // Veritabanı çakışma kontrolü
-
+        } while (petRepository.existsByUniqueCode(code));
         return code;
     }
 }
